After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740798 - videoscale: Videoscale test suite fails for 4-tap method
videoscale: Videoscale test suite fails for 4-tap method
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-27 05:55 UTC by Sanjay NM
Modified: 2014-11-27 08:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videoscale: method is change from 4-tap to 4-tap-sinc (2.25 KB, patch)
2014-11-27 05:57 UTC, Sanjay NM
rejected Details | Review

Description Sanjay NM 2014-11-27 05:55:11 UTC
Recently there is a patch which has changed 4-tap method to 4-tap-sinc. Due to this test suite is failing.
Comment 1 Sanjay NM 2014-11-27 05:57:24 UTC
Created attachment 291611 [details] [review]
videoscale: method is change from 4-tap to 4-tap-sinc

Recently method is changed from 4-tap to 4-tap-sinc. Updated the same in testsuite
Comment 2 Wim Taymans 2014-11-27 08:48:24 UTC
It should not have changed, here is the right patch:

commit 9efbba8c1c0c6c5aa682f9521c8834010ab38110
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Thu Nov 27 09:45:07 2014 +0100

    videoscale: use old property name
    
    Unbreak ABI by changing to the old property name again.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740798